--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,5 +10,8 @@
 @import "base/utilities";
 
 @import "layout/header";
+@import "layout/about";
+@import "layout/journal";
+@import "layout/offer";
 
 @import "components/button";
