--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -33,18 +33,17 @@ body {
   line-height: 1.6;
 }
 
-.container {
-  padding-right: 1.5rem;
-  padding-left: 1.5rem;
-}
+// .container {
+//   padding-right: 1.5rem;
+//   padding-left: 1.5rem;
+// }
 
 .section {
-  border-left: 1px solid #f9f9f9;
-  border-right: 1px solid #f9f9f9;
+  // border-left: 1px solid lightgray;
+  // border-right: 1px solid lightgray;
   max-width: 1170px;
   margin-right: auto;
   margin-left: auto;
-  // overflow: hidden;
 
   @include response(tab-land) {
     border-left: none;
