--- a/sass/layout/_gallery.scss
+++ b/sass/layout/_gallery.scss
@@ -5,5 +5,26 @@
   }
   &-content {
     margin-top: 7rem;
+    display: flex;
+    justify-content: space-around;
+
+    & > * {
+      display: flex;
+      flex-direction: column;
+    }
+
+    &__item {
+      &--4 {
+        margin-top: 3rem;
+      }
+
+      &--5 {
+        margin-top: 3rem;
+      }
+
+      &--6 {
+        margin-top: 3rem;
+      }
+    }
   }
 }
