--- a/css/style.css
+++ b/css/style.css
@@ -328,11 +328,9 @@ body {
   font-weight: 400;
   line-height: 1.6; }
 
-.container {
-  min-width: 100vw; }
-  .container > * {
-    position: relative;
-    background-color: #fff; }
+.container > * {
+  position: relative;
+  background-color: #fff; }
 
 li {
   list-style: none; }
@@ -417,9 +415,9 @@ h1 {
     .header-nav__logo {
       font-family: Bringin;
       font-weight: 400;
-      font-size: 2.9rem;
+      font-size: 3.3rem;
       color: #36aeea;
-      margin-right: 10rem; }
+      margin-right: 6.5rem; }
       .header-nav__logo span {
         color: #95a5ad; }
       @media only screen and (max-width: 56.25em) {
@@ -427,18 +425,29 @@ h1 {
           order: 2; } }
     .header-nav__links {
       display: flex;
-      font-size: 1.6rem;
       align-items: center; }
       .header-nav__links-item {
         color: #9daeb6;
         font-family: open-sans, sans-serif;
         font-style: normal;
         font-weight: 700;
-        font-size: 1.2rem;
+        font-size: 1.4rem;
         font-weight: 700;
-        text-transform: uppercase; }
+        text-transform: uppercase;
+        position: relative; }
         .header-nav__links-item:not(:last-child) {
           margin-right: 2rem; }
+        .header-nav__links-item::after {
+          content: "";
+          position: absolute;
+          bottom: -5px;
+          left: 0;
+          width: 0;
+          height: 0;
+          background-color: #36aeea; }
+        .header-nav__links-item:hover::after {
+          width: 100%;
+          height: 2px; }
       @media only screen and (max-width: 56.25em) {
         .header-nav__links {
           order: 1;
@@ -450,13 +459,13 @@ h1 {
           order: 3; } }
   .header-info {
     width: 45%;
-    margin-top: 20rem;
+    margin-top: 17.5rem;
     margin-left: 5rem; }
     @media only screen and (max-width: 75em) {
       .header-info {
         width: 60%;
         margin-top: 0;
-        margin-left: 5rem;
+        margin-left: 3.5rem;
         padding-top: 10rem;
         padding-bottom: 10rem; } }
   .header .heading-primary {
@@ -492,8 +501,12 @@ h1 {
 
 .about {
   padding-right: 1.5rem;
-  padding-left: 1rem;
+  padding-left: 1.5rem;
   background-color: #f6f4f4; }
+  @media only screen and (max-width: 75em) {
+    .about {
+      padding-right: 0;
+      padding-left: 0; } }
   .about-wrapper {
     max-width: 1170px;
     margin-right: auto;
@@ -503,12 +516,23 @@ h1 {
     background-repeat: no-repeat;
     background-size: 90%;
     display: flex; }
+    @media only screen and (max-width: 75em) {
+      .about-wrapper {
+        background-position: 200% 15%; } }
   .about-info {
     width: 41.5%;
+    margin-left: 5rem;
     padding-top: 15rem;
     padding-bottom: 15rem; }
+    @media only screen and (max-width: 75em) {
+      .about-info {
+        padding-bottom: 10rem;
+        padding-top: 10rem; } }
     .about-info > * {
       width: 80%; }
+      @media only screen and (max-width: 75em) {
+        .about-info > * {
+          width: 85%; } }
     .about-info h3 {
       position: relative;
       display: inline-block; }
@@ -519,19 +543,27 @@ h1 {
     .about-info p {
       margin-top: 2.7rem; }
     .about-info button {
-      margin-top: 3rem; }
+      margin-top: 3rem;
+      width: 80%; }
   .about-img {
     flex-grow: 1;
     position: relative; }
     .about-img--1 {
-      transform: translate(200px, -35px);
+      position: absolute;
+      top: -35px;
+      left: 200px;
       width: 100%;
       padding-bottom: 8rem; }
-      @media only screen and (max-width: 75em) {
+      @media only screen and (max-width: 85.625em) {
         .about-img--1 {
           width: 70%;
-          transform: none;
+          position: initial;
           margin-left: 30%; } }
+      @media only screen and (max-width: 75em) {
+        .about-img--1 {
+          width: 80%;
+          position: initial;
+          margin-left: 20%; } }
     .about-img--2 {
       position: absolute;
       bottom: 25px;
@@ -541,7 +573,7 @@ h1 {
         .about-img--2 {
           bottom: 0;
           left: 0;
-          width: 45%; } }
+          width: 50%; } }
 
 .journal-wrapper {
   max-width: 1170px;
@@ -659,11 +691,15 @@ h1 {
 
 .offer {
   padding-right: 1.5rem;
-  padding-left: 1rem;
+  padding-left: 1.5rem;
   text-align: left;
   padding-top: 14rem;
   background: url(../img/offer-big-tree.png) 90% bottom no-repeat fixed, url(../img/offer-sm-tree.png) 70% bottom no-repeat fixed, url(../img/offer-bc-left.png) left bottom no-repeat fixed, url(../img/offer-bc-right.png) right bottom no-repeat fixed;
   background-color: #f6f4f4; }
+  @media only screen and (max-width: 75em) {
+    .offer {
+      background: url(../img/offer-big-tree.png) 110% bottom no-repeat/contain, url(../img/offer-sm-tree.png) 60% bottom no-repeat, url(../img/offer-bc-left.png) left bottom no-repeat, url(../img/offer-bc-right.png) right bottom no-repeat;
+      background-color: #f6f4f4; } }
   .offer-wrapper {
     max-width: 1170px;
     z-index: 100;
@@ -674,43 +710,64 @@ h1 {
       content: url(../img/waves.svg);
       display: block;
       margin-bottom: 3.5rem; }
+    @media only screen and (max-width: 75em) {
+      .offer-wrapper::before {
+        margin-left: 3.5rem; } }
   .offer-content {
     width: 65%;
     position: relative; }
+    @media only screen and (max-width: 75em) {
+      .offer-content {
+        margin-left: 3.5rem; } }
     .offer-content__text {
       margin-top: 2.5rem;
-      font-size: 1.6rem; }
+      font-size: 1.6rem;
+      width: 80%; }
+      @media only screen and (max-width: 75em) {
+        .offer-content__text {
+          width: 50%; } }
     .offer-content__form {
       margin-top: 3rem;
       width: 100%;
       display: flex;
       border-radius: 0.4rem;
-      overflow: hidden; }
-      .offer-content__form div {
-        display: flex;
-        width: 70%;
-        position: relative; }
-        .offer-content__form div input {
-          width: 50%;
-          border: none;
-          padding-left: 2rem;
-          font-size: 1.6rem;
-          font-family: open-sans, sans-serif;
-          font-style: normal;
-          font-weight: 400;
-          letter-spacing: 0.032rem; }
-        .offer-content__form div::after {
-          content: "";
-          position: absolute;
-          width: 0.1rem;
-          height: 3.5rem;
-          background-color: #ebebeb;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%); }
+      overflow: hidden;
+      display: flex;
+      width: 100%;
+      position: relative; }
+      @media only screen and (max-width: 75em) {
+        .offer-content__form {
+          flex-direction: column; } }
+      .offer-content__form input {
+        width: 33.3%;
+        border: none;
+        padding: 2rem;
+        font-size: 1.6rem;
+        font-family: open-sans, sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        letter-spacing: 0.032rem; }
+        @media only screen and (max-width: 75em) {
+          .offer-content__form input {
+            width: 50%; } }
+      .offer-content__form::after {
+        content: "";
+        position: absolute;
+        width: 0.1rem;
+        height: 3.5rem;
+        background-color: #ebebeb;
+        top: 50%;
+        left: 33%;
+        transform: translate(-33%, -50%); }
+        @media only screen and (max-width: 75em) {
+          .offer-content__form::after {
+            content: none; } }
       .offer-content__form button {
-        width: 30%;
+        width: 33.3%;
         border-radius: 0.4rem; }
+        @media only screen and (max-width: 75em) {
+          .offer-content__form button {
+            width: 50%; } }
     .offer-content__notice {
       margin-top: 2.1rem;
       padding-bottom: 25rem;
@@ -812,7 +869,9 @@ h1 {
   .travel-list {
     margin-top: 10rem;
     padding-bottom: 48rem;
-    display: flex; }
+    display: flex;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem; }
     .travel-list__item {
       padding-top: 34.356%;
       height: 0;
@@ -829,7 +888,8 @@ h1 {
         flex-direction: column;
         justify-content: space-between;
         height: 100%;
-        padding-left: 2rem; }
+        padding-left: 2rem;
+        padding-right: 2.2rem; }
       .travel-list__item-stars {
         margin-top: 1rem; }
         .travel-list__item-stars img {
@@ -842,6 +902,9 @@ h1 {
         font-style: normal;
         font-weight: 400;
         font-size: 2.8rem; }
+        @media only screen and (max-width: 75em) {
+          .travel-list__item-text h4 {
+            font-size: 2.5rem; } }
       .travel-list__item-text p {
         margin-top: 1rem;
         color: #ffffff;
@@ -849,6 +912,9 @@ h1 {
         font-style: normal;
         font-weight: 400;
         font-size: 1.6rem; }
+        @media only screen and (max-width: 75em) {
+          .travel-list__item-text p {
+            font-size: 1.4rem; } }
       .travel-list__item-price {
         margin-bottom: 1.3rem;
         display: flex;
@@ -860,14 +926,19 @@ h1 {
           font-weight: 400;
           font-size: 1.8rem;
           text-decoration: line-through; }
+          @media only screen and (max-width: 75em) {
+            .travel-list__item-price div:first-of-type {
+              font-size: 1.6rem; } }
         .travel-list__item-price div:last-of-type {
           margin-left: auto;
-          margin-right: 2rem;
           color: #ffffff;
           font-family: open-sans, sans-serif;
           font-style: normal;
           font-weight: 800;
           font-size: 2.6rem; }
+          @media only screen and (max-width: 75em) {
+            .travel-list__item-price div:last-of-type {
+              font-size: 2.2rem; } }
       .travel-list__item--1 {
         background-image: url(../img/travel-card-1.png); }
       .travel-list__item--2 {
@@ -909,7 +980,9 @@ h1 {
     margin-top: 3rem; }
 
 .footer {
-  background: url(../img/footer-bc-low.png) bottom no-repeat, url(../img/footer-bc-high.png) center 100% no-repeat; }
+  background: url(../img/footer-bc-low.png) bottom no-repeat, url(../img/footer-bc-high.png) center 100% no-repeat;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem; }
   .footer-wrapper {
     max-width: 1170px;
     z-index: 100;
@@ -974,6 +1047,9 @@ h1 {
     margin-left: auto;
     margin-right: auto;
     text-align: center; }
+    @media only screen and (max-width: 75em) {
+      .footer-contacts {
+        margin-top: 30rem; } }
     .footer-contacts__heading {
       font-family: open-sans, sans-serif;
       font-style: normal;
@@ -990,6 +1066,9 @@ h1 {
       font-weight: 400;
       font-size: 1.6rem;
       color: #383e4a; }
+      @media only screen and (max-width: 75em) {
+        .footer-contacts__text {
+          font-weight: bold; } }
     .footer-contacts__form {
       margin-top: 3.5rem;
       display: flex;
@@ -1005,7 +1084,7 @@ h1 {
         font-style: normal;
         font-weight: 400;
         font-size: 1.8rem;
-        color: #cccccc;
+        color: #383e4a;
         border-radius: 0.4rem;
         border: 0.3rem solid #ffffff;
         background-color: #ffffff; }
