--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -23,9 +23,9 @@
 
     &__logo {
       @include Bringin;
-      font-size: 2.9rem;
+      font-size: 3.3rem;
       color: #36aeea;
-      margin-right: 10rem;
+      margin-right: 6.5rem;
 
       & span {
         color: #95a5ad;
@@ -38,17 +38,31 @@
 
     &__links {
       display: flex;
-      font-size: 1.6rem;
       align-items: center;
       &-item {
         color: #9daeb6;
         @include sans(bold);
-        font-size: 1.2rem;
+        font-size: 1.4rem;
         font-weight: 700;
         text-transform: uppercase;
-
+        position: relative;
         &:not(:last-child) {
           margin-right: 2rem;
+        }
+
+        &::after {
+          content: "";
+          position: absolute;
+          bottom: -5px;
+          left: 0;
+          width: 0;
+          height: 0;
+          background-color: #36aeea;
+        }
+
+        &:hover::after {
+          width: 100%;
+          height: 2px;
         }
       }
 
@@ -69,13 +83,13 @@
 
   &-info {
     width: 45%;
-    margin-top: 20rem;
+    margin-top: 17.5rem;
     margin-left: 5rem;
 
     @include response(tab-land) {
       width: 60%;
       margin-top: 0;
-      margin-left: 5rem;
+      margin-left: 3.5rem;
       padding-top: 10rem;
       padding-bottom: 10rem;
     }
