--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -1,11 +1,5 @@
 .about {
-  padding-right: 1.5rem;
-  padding-left: 1.5rem;
   background-color: #f6f4f4;
-  @include response(tab-land) {
-    padding-right: 0;
-    padding-left: 0;
-  }
 
   &-wrapper {
     max-width: 1170px;
@@ -20,23 +14,28 @@
     @include response(tab-land) {
       background-position: 200% 15%;
     }
+
+    @include response(phone) {
+      flex-direction: column;
+    }
   }
 
   &-info {
-    width: 41.5%;
-    margin-left: 5rem;
-    padding-top: 15rem;
-    padding-bottom: 15rem;
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 1.5rem;
+    margin: 15rem 0;
 
-    @include response(tab-land) {
-      padding-bottom: 10rem;
-      padding-top: 10rem;
+    @include response(tab-port) {
+      margin: 10rem 0;
     }
 
     @include response(phone) {
-      margin: 0;
-      padding: 5rem 1.5rem;
-      width: 100%;
+      width: 50%;
+      margin: 5rem auto;
+      padding-left: 0;
       text-align: center;
     }
 
@@ -45,6 +44,10 @@
 
       @include response(tab-land) {
         width: 85%;
+      }
+
+      @include response(phone) {
+        width: 100%;
       }
     }
 
@@ -66,44 +69,49 @@
   }
 
   &-img {
-    flex-grow: 1;
+    width: 60%;
     position: relative;
+    display: flex;
+    flex-direction: column;
+
+    @include response(phone) {
+      width: 50%;
+      flex-direction: row;
+    }
 
     &--1 {
-      position: absolute;
-      top: -35px;
-      left: 200px;
-      width: 100%;
+      width: 90%;
+      transform: translate(220px, -30px);
 
-      @media only screen and (max-width: 106.25em) {
-        width: 70%;
-        position: initial;
-        margin-left: 30%;
-      }
-
-      @include response(tab-land) {
-        width: 80%;
-        position: initial;
-        margin-left: 20%;
+      @media only screen and (max-width: 93.75em) {
+        transform: translate(0px, -30px);
+        margin-left: 10%;
       }
 
       @include response(phone) {
-        width: 90%;
-        position: initial;
-        margin-left: 10%;
+        width: 100%;
+        margin: 0;
+        transform: none;
+        object-fit: cover;
       }
     }
 
     &--2 {
+      width: 50%;
       position: absolute;
-      bottom: 25px;
-      left: 110px;
-      width: 45%;
+      bottom: 20px;
+      left: 50px;
 
-      @include response(tab-land) {
+      @media only screen and (max-width: 93.75em) {
         bottom: 0;
         left: 0;
-        width: 50%;
+        width: 45%;
+      }
+
+      @include response(phone) {
+        position: inherit;
+        width: 100%;
+        object-fit: cover;
       }
     }
   }
