--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,12 +1,13 @@
 .footer {
-  background: url(../img/footer-bc-low.png) bottom no-repeat,
-    url(../img/footer-bc-high.png) center 100% no-repeat;
+  background: url(../img/footer-bc-low.png) center bottom no-repeat,
+    url(../img/footer-bc-high.png) center bottom no-repeat;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 
   @include response(phone) {
-    background: url(../img/footer-bc-low.png) bottom no-repeat,
-      url(../img/footer-bc-high.png) bottom no-repeat;
+    background: url(../img/footer-bc-low.png) center bottom
+        no-repeat/cover,
+      url(../img/footer-bc-high.png) center bottom no-repeat/cover;
   }
 
   &-wrapper {
