--- a/css/style.css
+++ b/css/style.css
@@ -1174,7 +1174,7 @@ label.show-menu {
   padding-right: 1.5rem; }
   @media only screen and (max-width: 37.5em) {
     .footer {
-      background: url(../img/footer-bc-low.png) center bottom no-repeat/cover, url(../img/footer-bc-high.png) center bottom no-repeat/cover; } }
+      background: url(../img/footer-bc-low.png) center 400px no-repeat/cover, url(../img/footer-bc-high.png) center 450px no-repeat/cover; } }
   .footer-wrapper {
     max-width: 1170px;
     z-index: 100;
